--- a/Desafio.ipynb
+++ b/Desafio.ipynb
@@ -25,15 +25,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A tabuada de 2 é\n",
+      "\n",
+      "2 x 1 = 2 \n",
+      "2 x 2 = 4 \n",
+      "2 x 3 = 6 \n",
+      "2 x 4 = 8 \n",
+      "2 x 5 = 10 \n",
+      "2 x 6 = 12 \n",
+      "2 x 7 = 14 \n",
+      "2 x 8 = 16\n",
+      "2 x 9 = 18 \n",
+      "2 x 10 = 20\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(input('Digite um número para ver sua tabuada:'))\n",
-    "print('*' * 14)\n",
-    "  print('{} x 1 = {} \\n{} x 2 = {} \\n{} x 3 = {} \\{} x 4 = {} \\n{} x 5 = {} \\n{} x 6 = {} \"\\n{} x 7\" = {} \\{} x 8 = {}'\n",
-    "    '\\n{} x 9 = {} \\n{} x 10 = {}'.format(a, (n*1), n, (b*2), n, (n*9), n, (n*4), n, (n*5), n, (n*1), n, (n*7), n, (y*8), n, (n*9), n, (nn*10)))\n",
-    "print('-' * 14)"
+    "print('A tabuada de', n, 'é')\n",
+    "print('\\n{} x 1 = {} \\n{} x 2 = {} \\n{} x 3 = {} \\n{} x 4 = {} \\n{} x 5 = {} \\n{} x 6 = {} \\n{} x 7 = {} \\n{} x 8 = {}'\n",
+    "'\\n{} x 9 = {} \\n{} x 10 = {}'.format(n, (n*1), n, (n*2), n, (n*3), n, (n*4), n, (n*5), n, (n*6), n, (n*7), n, (n*8), n, (n*9), n, (n*10)))\n"
    ]
   },
   {
@@ -46,28 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------\n",
-      "2 x 1 = 2 \n",
-      "2 x 2 = 4 \n",
-      "2 x 3 = 6 \n",
-      "2 x 4 = 8 \n",
-      "2 x 5 = 10 \n",
-      "2 x 6 = 12 \n",
-      "2 x 7 = 14 \n",
-      "2 x 8 = 16\n",
-      "2 x 9 = 18 \n",
-      "2 x 10 = 20\n",
-      "--------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
@@ -87,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
